Fixes spacing and colour

--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
+  font: normal 100%/1.3 "Roboto Slab", serif;
 }
 
 *, *::before, *::after {
@@ -18,4 +19,26 @@ html {
 
 body {
   margin: 0;
+  padding: 0;
+}
+
+figure {
+  position: relative;
+  margin: 0;
+  padding: 0;
+}
+
+figcaption {
+  max-width: 15em;
+  padding: 1rem .5rem;
+  position: absolute;
+  background-color: rgba(0, 0, 0, .5);
+  border-radius: .5em;
+  color: #fff;
+  transform: translate(10px, -100px);
+}
+
+.img-flex {
+  width: 100%;
+  display: block;
 }
